<resources>
    <string name="app_name">NetBare</string>

    <string name="start_netbare">Start service</string>
    <string name="stop_netbare">Stop service</string>
	<string name="use_autogenerated_certificates">Use autogenerated certificates</string>
	<string name="provide_existing_root_certificate_and_rsa_private_key">Provide existing root certificate and RSA private key</string>
	<string name="root_certificate">Root certificate</string>
	<string name="private_key_rsa">Private key (RSA)</string>
	<string name="picker_root_certificate">Pick your ROOT certificate</string>
	<string name="picker_private_key">Pick your PRIVATE key (in PEM format)</string>

</resources>